# stem_material

./: Cargo.toml  LICENSE  README.md  README.template.md  README_local.md  build.rs
docs/: links.md  main.md
docs/create_doc_images/: Cargo.toml
docs/create_doc_images/src/: main.rs
docs/readme_parts/: end.md  jordan_model.svg.md  links.md  relative_permeability.svg.md
examples/: ferromagnetic_permeability.rs  jordan_model.rs
src/: ferromagnetic_permeability.rs  jordan_model.rs  lib.rs  material.rs  prelude.rs  relative_permeability.rs  si.rs
src/iron_losses/: jordan_model.rs  mod.rs
tests/: ferromagnetic_permeability.rs  jordan_model.rs  material.rs
tests/serde/: ferromagnetic_permeability.rs  from_test_database.rs  jordan_model.rs  main.rs  material.rs
